Fix hamburger button for high-contrast modes

--- a/django_app/frontend/src/css/general.scss
+++ b/django_app/frontend/src/css/general.scss
@@ -111,6 +111,9 @@ body {
 .iai-top-nav__mobile-button {
   background-color: black;
 }
+.iai-top-nav__mobile-button-bar {
+  border-bottom: 3px solid white; /* For high contrast modes */
+}
 @media (max-width: 1019px) {
   .iai-footer__list {
     margin-top: 0.5rem;
